padding reduction on bioBox, removed whitespace tags due to spacing issue, added bottom marging to extend space for legibility of contact text with bioBox height changed too.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -238,7 +238,7 @@ h1 {
 }
 
 .bioBox {
-  height: 500px;
+  height: 800px;
   width: 80%;
   margin: auto;
   padding: 40px 10px 10px 15px;
